<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.cellstudio.cellvideo.interactor.viewmodel.settings.AddSourceViewModel"/>
        <variable
            name="listener"
            type="android.view.View.OnClickListener"/>
        <import type="android.view.View"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/text_black"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/add_source"/>
        
        <androidx.cardview.widget.CardView
            android:id="@+id/cvAddSourceError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            android:visibility="@{viewmodel.viewData.showError? View.VISIBLE: View.GONE}"
            android:layout_marginBottom="8dp">
            
            <TextView
                android:id="@+id/tvAddSourceError"
                android:padding= "8dp"
                android:background="@color/red_100"
                android:textColor="@color/red_A700"
                android:text = "@string/not_a_valid_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSourceLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_name"
            android:layout_marginBottom="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines = "1"
                android:singleLine="true"
                android:text="@={viewmodel.viewEvent.labelName}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSourceUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/source_url"
            android:layout_marginBottom="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines = "1"
                android:singleLine="true"
                android:text="@={viewmodel.viewEvent.sourceUrl}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnSourceConfirm"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="2"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:enabled="@{viewmodel.viewData.submitButtonEnabled}"
                android:onClick="@{()-> viewmodel.viewEvent.onSubmitButtonClicked()}"
                android:stateListAnimator="@null"
                android:text="@string/confirm"
                android:textSize="@dimen/font_size_m" />

        </LinearLayout>

    </LinearLayout>

</layout>